--- a/_posts/0000-01-02-mikecole10.md
+++ b/_posts/0000-01-02-mikecole10.md
@@ -2,7 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-A commit message
-adding new section
-
+something new 
 Use the left arrow to go back!
